WebRoot/js/zimbraMail/config/style/zm.css
/* ... */
/* ??? USE? */
.ZmAutocompleteListView .Row, 
.ZmAutocompleteListView .Row-selected {
	@TextPadding@
    height:auto;
}
.ZmAutocompleteListView .Row-selected { 
	/* color: white; */
}



/*
 * Filter rules 
 */

/* list of filters */
.ZmFilterListView {
	@AppBg@
	@AppBorder@
	width: 100%;
}

/* ??? USE? */
.ZmFilterRuleDialog .paddedTableCell {
  vertical-align:middle;
  @TextPadding@
}

/* ??? USE? */
.ZmFilterRuleDialog .chooserButton {
	width: 120px;
}

.ZmFilterRuleDialog .plusMinusButton {
	width: 20px;
}

/*
* Print View
*/
.ZmPrintView-username {
	@FontSize-bigger@
}

.ZmPrintView-company {
	@FontSize-biggest@
}




/*
 * Preferences
 */

/* Container for the set of preference pages (including tabs) */
.ZmPrefView {
	@PageBg@
	@FullSize@
}

/* ??? USE?  Seems to be the entire preferences form body.  RENAME? */
.ZmPrefView .TitleBar {
	padding-top: @BoxPaddingSize@;
}

/* Background for the pref tabs */
.ZmPrefView .DwtTabTable {
	@PageHeaderBg@
}

/* Box that shows a color, allows you to click to set the color */
.ZmPrefView .colorBox {
	@AppBorder@		/* ??? */
	width:18px; 
	height:18px; 
}


/* Divider between groups of related preferences */
.ZmPrefView .horizSep {
	@BottomSeparator@
	margin-top: @BoxMarginSize@;
}

/* Prefs are laid out in a table */
.prefTable {
	table-layout: fixed;
	width: auto;
}

/* label for pereferences */
.prefLabel {
	@Label@
	text-align:right;
	width: 300px;		/* ??? SIZE */
}
.prefContent {
	width: 420px;		/* ??? SIZE */
}

/* button sizing */
.ZmPreferencesPage .changePasswordButton { }
.ZmPreferencesPage .exportButton { }
.ZmPreferencesPage .resetButton {	width: 100px;	}

/* ??? USE? */
.ZmShortcutsPage .paddedTableCell {
  vertical-align:middle;
  @TextPadding@
}

.Row .ZmFilterDetailsView td {
	@NoWrap@
	vertical-align: middle;
}

.ZmIdentitiesBox {
	background-color:@ItemBgColor@;
}

.ZmIdentityView .Label {
	text-align: right;
}

.ZmIdentityView .Hint {
	@FontSize-smaller@
}
.ZmIdentityView .DwtTabBar {
	@PageBg@
}
/* Browse button */
.ZmIdentityView .DwtButton,
.ZmIdentityView .DwtButton-activated,
.ZmIdentityView .DwtButton-triggered,
.ZmIdentityView .DwtButton-toggled,
.ZmIdentityView .DwtButton-disabled,
.ZmIdentityView .DwtButton-active,
.ZmIdentityView .DwtButton-focused {
	min-width: 0;
	margin-left: 5px;
}

.ZmPopAccountsView {}
.ZmPopAccountsViewLink {
    margin-top: 1em;
    margin-left: 2em;
}
.ZmPopAccountsViewLinkOpts {
    margin-top: 1em;
    margin-left: 2em;
}

.infoBox {
	margin:0px 5px 10px 0px;
	background-color:#FFF6BF;
	border:1px solid #FFDD00;
	-moz-border-radius:10px;
	padding:10px 10px 10px 10px;
}

.infoBoxImg {
    padding-right: 10px;
}

.infoTitle {
	padding-left:5px;
	font-weight:bold;
	border-bottom:1px solid #FFDD00;
	margin-bottom:10px;
}

.infoTitleClose {
	margin-right:5px;
	float:right;
	font-weight:normal;
	cursor:pointer;
}

.SubHead,
.PanelHead {
	font-size:12px; font-weight:bold;
	padding:3 10 5 7;
}

.DarkBg,
.PanelHead {
	background-color:#bab09a;
}

.OutsetPanel {
	padding:0px;
	border:1px solid; 
	border-color:#a29a87 #746e61 #746e61 #a29a87;
	-moz-border-left-colors:#a29a87 #eae0c7; 	
	-moz-border-top-colors: #a29a87 #eae0c7; 	
	-moz-border-bottom-colors: #746e61 #bab09a;		
	-moz-border-right-colors: #746e61 #bab09a;
}

/*
 *	Change password dialog
 */
.ZmChangePasswordDialogCell {
	white-space: nowrap;
	overflow: hidden;
	text-align: right;
	width: 1%;
}


/*
 *	Login dialog
 */
.ZmLoginDialog {
	@ChromeBg@
	overflow:hidden;
}
.ZmLoginDialog-Transparent {background-color: transparent;}


/*
 *	Share properties dialog
 */
/* ??? USE? */
.ZmSharePropsDialog .GrouperLabel {
	font-weight: normal;
	font-size: 10pt;
	color: #666;
}


/*
 *  Notes application
 */

.ZmNotebookPageView {
	@AppBg@
}

.ZmPageEditView {
 	@PageBg@
}

.ZmPageEditView .RenameWarning {
	background-color: #ffffcc;
	@Text-important@
}

.ZmNotebookPageView {
	overflow: auto;
}


/* ??? I THINK THIS SHOULD BE DYNAMICALLY WRITTEN ACCORDING TO THEIR PREFERENCES...? */
.ZmNotebookPageView, .ZmNotebookPageView P, .ZmNotebookPageView TD, .ZmNotebookPageView DIV,
.ZmNotebookPageView SPAN, .ZmNotebookPageView SELECT, .ZmNotebookPageView INPUT,
.ZmNotebookPageView TEXTAREA, .ZmNotebookPageView BUTTON, .ZmNotebookPageView A {
	font-family:inherit;
	font-size:inherit;
}
.ZmNotebookPageView H1 {
	margin-top: 0;
	margin-bottom: @BoxMarginSize@;
}
.ZmNotebookPageView H2 {
	margin-top: @BoxMarginSize@;
	margin-bottom: @BoxMarginSize@;
}

.ZmNotebookPageView SPAN.Object, .ZmNotebookPageView SPAN.Object-activated {}

.ZmPageEditView {
}
.ZmPageEditView .Label {
	@FontFamily-html@
	@FontSize-bigger@
	text-align: right;
	width: 1%;
}
.ZmEditNoteView .DwtInputField {
	width: 100%;
}
.ZmEditNoteView .DwtHtmlEditorIFrame {
	height: 100%;
}


/* Label for assist dialog */
/* ??? RENAME TO ZmFieldLabelRight ? */
.ZmAsstFieldLabel {
	@Label@
	@NoWrap@
	text-align: right;
	width: 1%;
}

.ZmAsstField, .ZmAsstField TD {
	color: black;
	font-style: normal;
}

.ZmAsstFieldDefValue, .ZmAsstFieldDefValue TD {
	color: gray;
	font-style: italic;
}

.ZmAsstContactHelp {
	height: 200px;
	overflow: auto;
}

.ZmAsstContactHelpHeader TD {
	font-weight: bold;
	@BottomSeparator@
}

/* POP Accounts */
.ZmDataSourceTestDialog {
}
.ZmDataSourceTestTable {
    margin: 0.5em;
}
.ZmDataSourceTestTable TH {
    text-align: left;
}
.ZmTestItem, .ZmTestStatus {
    border-top: solid black 1px;
}
.ZmTestDetails {
    padding-left: 1em;
}
.ZmTestSucceeded {
    font-weight: bold;
    @Text-success@
}
.ZmTestFailed {
    font-weight:bold;
    @Text-error@ 
}
.ZmTestError {
    @Text-error@
}
.ZmTestNote {
    @Text-disabled@
}

/*
 *   Shortcut key display
 */
 
.shortcutList {
	width:100%;
	border-collapse:collapse;
	margin-bottom:10px;
}

.shortcutListHeader {
	border:1px solid #999999;
}

.shortcutKeys {
	text-align:right;
	padding:6px;
	vertical-align:top;
	@SeparatorBorder@
	width:250px;
	font-weight:bold;
	@Text-disabled@;
}
/* ... */

